# agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
finagent/: README.md  pyproject.toml  setup.py
finagent/finagent/: __init__.py  cli.py  hookspecs.py  raw_storage.py
finagent/finagent/models/: __init__.py  news.py
finagent/finagent/plugins/: __init__.py  default.py  extensions.py
finagent/finagent/processors/: __init__.py  processor.py  summarizer.py
finagent/finagent/providers/: __init__.py  gnews_api.py  news_api.py  openai.py
finagent/finagent/utils/: __init__.py  config.py  file_utils.py
finagent/tests/: test_raw_storage.py
